# minecraft-challenge

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Constants.h  Controller.cpp  Controller.h  ITickable.h  Player.cpp  Player.h  Shader.cpp  Shader.h  glad.c  main.cpp  stb_image.cpp
src/physics/: BoundingBox.cpp  BoundingBox.h
src/shader/: fshader.glsl  vshader.glsl
src/world/: Block.cpp  Block.h  BlockData.h  BlockDatabase.cpp  BlockDatabase.h  BlockTypes.h  Chunk.cpp  Chunk.h  Voxel.cpp  Voxel.h  World.cpp  World.h
src/world/texture/: Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureGenerator.cpp  TextureGenerator.h
